test/typecheck/errors/bad-identifier3.boa
_f := function() : bool { return true; };
